--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-form * {
-  display: block;
-  width: 80%;
-  margin: 1em;
-}
-
-#checkbox {
-  display:inline;
-
+[type="checkbox"] {
+  margin-bottom: 10px;
 }
